# xopr-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: contributing.md  index.md
docs/api/: accessor.md  picker.md
docs/notebooks/: grounding_line_picker_demo.ipynb
src/xopr_viewer/: __init__.py  accessor.py  coordinates.py  picker.py
tests/: conftest.py  test_accessor.py  test_coordinates.py  test_picker.py
