[project]
name = "xopr-viewer"
version = "0.1.0"
description = "View and pick groundling lines"
readme = "README.md"
authors = [
    { name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hvplot>=0.12.2",
    "jupyter-bokeh>=4.0.5",
    "pandas>=2.0,<3.0",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
xopr = ["xopr>=0.3.0"]
notebook = [
    "notebook>=7.0.0",
    "jupyterlab_execute_time>=3.3.0",
]
[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.0.0,<8.0.0",
    "pooch>=1.9.0",
    "pyinstrument>=5.1.2",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "ruff>=0.14.14",
]

[tool.ruff]
extend-include = ["*.ipynb"]
